# datafun-07-regression

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  shape.ps1  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml
data/raw/: README.md  owid-co2-data-subset.csv
docs/: api.md  glossary.md  index.md  project-instructions.md  your-files.md
notebooks/: app_case.ipynb
src/datafun/: app_co2_case.py  app_penguins_case.py  extract_subset_case.py
tests/: test_app_case.py
